# pychoir

./: .gitignore  LICENSE.txt  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.rst
pychoir/: __init__.py  __version__.py  callables.py  comparisons.py  containers.py  core.py  existential.py  integration.py  logical.py  numeric.py  strings.py  types.py  utils.py
tests/: test_callables.py  test_comparisons.py  test_containers.py  test_core.py  test_existential.py  test_integration.py  test_logical.py  test_numeric.py  test_strings.py  test_types.py  test_utils.py
version/: __init__.py
