[project]
name = "pychoir"
version = "0.0.29"
description = "Test Matchers for humans"
readme = "README.md"
authors = [
    { name = "Antti Kajander", email = "9019523+kajaste@users.noreply.github.com" }
]
keywords = ["testing", "matchers", "mock", "error-handling", "exception"]
license = {text = "MIT License"}
requires-python = ">=3.6"
dependencies = []

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
source = "https://github.com/kajaste/pychoir"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "tomli",
    "tox",
    "sphinx",
]
