[project]
name = "pychoir"
dynamic = ["version"]
description = "Test Matchers for humans"
readme = "README.md"
authors = [
    { name = "Antti Kajander", email = "9019523+kajaste@users.noreply.github.com" }
]
keywords = ["testing", "matchers", "mock", "error-handling", "exception"]
license = {text = "MIT License"}
requires-python = ">=3.6"
dependencies = []

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
source = "https://github.com/kajaste/pychoir"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pychoir/_version.py"

[dependency-groups]
dev = [
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "sphinx",
    "tox",
]
